--- a/AutoGluon_for_Kaggle(ieee_fraud_detection)_competitions.ipynb
+++ b/AutoGluon_for_Kaggle(ieee_fraud_detection)_competitions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyOq/P2eTgcSxEP77PMn7noZ",
+      "authorship_tag": "ABX9TyM3orMVTEqcofLt9FJlKU33",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4827,73 +4827,123 @@
     {
       "cell_type": "code",
       "source": [
-        "%%bash\n",
-        "set -euo pipefail\n",
+        "# ---- 1) Clone your repo into Colab ----\n",
+        "%cd /content\n",
+        "!rm -rf repo\n",
+        "!git clone https://github.com/ashivashankars/archana_AutoGluon_repo.git repo\n",
+        "%cd /content/repo\n",
         "\n",
-        "# 0) Install helper (optional)\n",
-        "pip -q install nbstripout\n",
+        "# ---- 2) Create an artifacts folder inside the repo ----\n",
+        "!mkdir -p artifacts\n",
         "\n",
-        "# 1) Clone your repo\n",
-        "cd /content\n",
-        "rm -rf repo\n",
-        "git clone https://github.com/ashivashankars/archana_AutoGluon_repo.git repo\n",
-        "cd repo\n",
-        "\n",
-        "echo \"== nbstripout status ==\"\n",
-        "nbstripout --status || true\n",
-        "\n",
-        "echo -e \"\\n== .gitattributes mentions ==\"\n",
-        "grep -n \"nbstripout\" .gitattributes .git/info/attributes 2>/dev/null || echo \"No nbstripout in attributes\"\n",
-        "\n",
-        "echo -e \"\\n== Git config entries ==\"\n",
-        "git config --list --show-origin | grep -i nbstripout || echo \"No nbstripout in git config\"\n",
-        "\n",
-        "echo -e \"\\n== Hooks mentioning strip/nbconvert ==\"\n",
-        "grep -nE \"nbstripout|nbconvert|strip.*output\" .git/hooks/* 2>/dev/null || echo \"No matching hooks\"\n",
-        "\n",
-        "echo -e \"\\n== Pre-commit config (if any) ==\"\n",
-        "test -f .pre-commit-config.yaml && grep -nE \"nbstripout|nbconvert|jupyter|strip\" .pre-commit-config.yaml || echo \"No pre-commit config\"\n",
-        "\n",
-        "echo -e \"\\n== GitHub Actions that might strip outputs ==\"\n",
-        "test -d .github/workflows && grep -nRE \"nbstripout|nbconvert|jupyter|strip.*output\" .github/workflows 2>/dev/null || echo \"No workflow steps found\"\n"
+        "# ---- 3) COPY the files you want to keep (examples) ----\n",
+        "# Be selective: don't commit raw Kaggle data or secrets.\n",
+        "!cp /content/archie_submission.csv artifacts/ 2>/dev/null || true\n",
+        "!cp /content/test_transaction.csv artifacts/ 2>/dev/null || true\n",
+        "!cp /content/test_identity.csv artifacts/ 2>/dev/null || true\n",
+        "!cp /content/train_transaction.csv artifacts/ 2>/dev/null || true\n",
+        "!cp /content/AutoGluonModels artifacts/ 2>/dev/null || true"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "r6nWIj9H0ig0",
-        "outputId": "752f8ccc-c2a4-4e38-a3b7-7e02374a0951"
+        "id": "Fmp9n_a12xXu",
+        "outputId": "41899be4-30c7-4a92-e4d9-ffe17241a417"
       },
-      "execution_count": 34,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "== nbstripout status ==\n",
-            "nbstripout is not installed in repository '/content/repo'\n",
-            "\n",
-            "== .gitattributes mentions ==\n",
-            "No nbstripout in attributes\n",
-            "\n",
-            "== Git config entries ==\n",
-            "No nbstripout in git config\n",
-            "\n",
-            "== Hooks mentioning strip/nbconvert ==\n",
-            "No matching hooks\n",
-            "\n",
-            "== Pre-commit config (if any) ==\n",
-            "No pre-commit config\n",
-            "\n",
-            "== GitHub Actions that might strip outputs ==\n",
-            "No workflow steps found\n"
+            "/content\n",
+            "Cloning into 'repo'...\n",
+            "remote: Enumerating objects: 6, done.\u001b[K\n",
+            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 6 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (6/6), 128.80 KiB | 1.95 MiB/s, done.\n",
+            "/content/repo\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git config --global user.email \"shivashankars12n@gmail.com\"\n",
+        "!git config --global user.name \"Archana Shivashankar\""
+      ],
+      "metadata": {
+        "id": "bhoJR42J7McB"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Go to your clone\n",
+        "%cd /content/repo\n",
+        "\n",
+        "# 1) Undo the commit that added big files (keep your files in the working tree)\n",
+        "!git reset --soft origin/main\n",
+        "\n",
+        "# 2) Stop tracking the large CSVs (do NOT delete them locally)\n",
+        "!git rm --cached -f artifacts/test_transaction.csv artifacts/train_transaction.csv\n",
+        "\n",
+        "# 3) Ignore raw data going forward (but keep your submission CSV)\n",
+        "ignore_text = r\"\"\"\n",
+        "# Kaggle raw data & secrets (do not commit)\n",
+        "artifacts/test_transaction.csv\n",
+        "artifacts/train_transaction.csv\n",
+        ".kaggle/\n",
+        "kaggle.json\n",
+        "\n",
+        "# General rule: don't commit CSVs, except the submission\n",
+        "*.csv\n",
+        "!artifacts/archie_submission.csv\n",
+        "\"\"\"\n",
+        "with open(\".gitignore\", \"a\") as f:\n",
+        "    f.write(ignore_text)\n",
+        "\n",
+        "# 4) Commit only safe files (notebook + small artifacts)\n",
+        "!git add .gitignore artifacts/archie_submission.csv *.ipynb\n",
+        "!git commit -m \"Remove large CSVs; keep notebook with outputs + submission\"\n",
+        "\n",
+        "# 5) Push (uses your PAT remote you set earlier)\n",
+        "!git push origin HEAD:main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "NDpFRWuL9EEe",
+        "outputId": "60d943f5-a11e-4394-b290-cf7dea3764ab"
+      },
+      "execution_count": 50,
+      "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "Cloning into 'repo'...\n"
+            "/content/repo\n",
+            "rm 'artifacts/test_transaction.csv'\n",
+            "rm 'artifacts/train_transaction.csv'\n",
+            "[main caa0c89] Remove large CSVs; keep notebook with outputs + submission\n",
+            " 3 files changed, 648610 insertions(+)\n",
+            " create mode 100644 .gitignore\n",
+            " create mode 100644 artifacts/archie_submission.csv\n",
+            " create mode 100644 artifacts/test_identity.csv\n",
+            "Enumerating objects: 7, done.\n",
+            "Counting objects: 100% (7/7), done.\n",
+            "Delta compression using up to 12 threads\n",
+            "Compressing objects: 100% (6/6), done.\n",
+            "Writing objects: 100% (6/6), 6.45 MiB | 3.42 MiB/s, done.\n",
+            "Total 6 (delta 0), reused 0 (delta 0), pack-reused 0\n",
+            "To https://github.com/ashivashankars/archana_Autogluon_repo.git\n",
+            "   318d1c2..caa0c89  HEAD -> main\n"
           ]
         }
       ]
