--- a/AutoGluon_for_Kaggle(ieee_fraud_detection)_competitions.ipynb
+++ b/AutoGluon_for_Kaggle(ieee_fraud_detection)_competitions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyM3orMVTEqcofLt9FJlKU33",
+      "authorship_tag": "ABX9TyM2e3dttsR5GsEWlHlf0Jkl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "CLRO5V3Eqk2D"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "id": "8iBrAWKcqrOX",
         "outputId": "3dcb04f6-cec1-48f6-b259-8e05ec7aff81"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -348,7 +348,7 @@
         "id": "V_cKGFKWqwUL",
         "outputId": "818b5921-e663-49bb-df7a-6126a4355611"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +371,7 @@
         "id": "_kXynXzWqzYg",
         "outputId": "3faed610-36d6-4250-e447-f2e40145ca2e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +401,7 @@
         "id": "Cqg53dR9q55c",
         "outputId": "9227a6a4-4197-49f0-b859-c8a6f5c2b27f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
         "else:\n",
         "    print(f\"Error: {zip_file_path} not found. Please ensure the competition data is downloaded.\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "9vAr2fH21fHp"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +505,7 @@
       "metadata": {
         "id": "2zRPz8943N30"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
         "id": "XP2Dhb0m3q-f",
         "outputId": "eaaf6607-ad04-4028-be7a-6267305118a6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2692,6 +2692,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Now, we use the trained AutoGluon Predictor to make predictions on the competition’s test data. It is imperative that multiple test data files are joined together in the exact same manner as the training data."
+      ],
+      "metadata": {
+        "id": "-AlFhpAGAtsh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -2743,7 +2752,7 @@
         "id": "aEZwtVD2ABVF",
         "outputId": "ee810538-4098-4a9c-9539-ec5f5a0f2efb"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2771,7 +2780,7 @@
         "id": "Igbozy6iqAK4",
         "outputId": "abd784f3-1a0b-48d6-92fc-c1f11b7c1e48"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4683,7 +4692,7 @@
         "id": "1MYNmAocqiTO",
         "outputId": "8612b52a-5c89-4d2b-97d9-06710ea5ba56"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4718,7 +4727,7 @@
         "id": "_w0vGiD7quh7",
         "outputId": "ff4e1a1b-3196-4aad-82c4-dd935326ca47"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4753,7 +4762,7 @@
         "id": "gLBNC5A-rAeU",
         "outputId": "5b83e870-4a3a-4c62-cc75-d51741d3759a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4788,7 +4797,7 @@
       "metadata": {
         "id": "7lveNz8PrKBH"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4812,7 +4821,7 @@
         "id": "zZPLeDeatqwD",
         "outputId": "edbb7154-98cd-48d7-a33f-c478bf47dc88"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4823,6 +4832,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "GIT commit"
+      ],
+      "metadata": {
+        "id": "mAQD3rsgBrWg"
+      }
     },
     {
       "cell_type": "code",
@@ -4841,17 +4859,16 @@
         "!cp /content/archie_submission.csv artifacts/ 2>/dev/null || true\n",
         "!cp /content/test_transaction.csv artifacts/ 2>/dev/null || true\n",
         "!cp /content/test_identity.csv artifacts/ 2>/dev/null || true\n",
-        "!cp /content/train_transaction.csv artifacts/ 2>/dev/null || true\n",
-        "!cp /content/AutoGluonModels artifacts/ 2>/dev/null || true"
+        "!cp /content/train_transaction.csv artifacts/ 2>/dev/null || true"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fmp9n_a12xXu",
-        "outputId": "41899be4-30c7-4a92-e4d9-ffe17241a417"
+        "outputId": "bd51126f-d1d3-42d2-ff30-f4c6ccba7bdd"
       },
-      "execution_count": 43,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -4859,11 +4876,12 @@
           "text": [
             "/content\n",
             "Cloning into 'repo'...\n",
-            "remote: Enumerating objects: 6, done.\u001b[K\n",
-            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Total 6 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (6/6), 128.80 KiB | 1.95 MiB/s, done.\n",
+            "remote: Enumerating objects: 15, done.\u001b[K\n",
+            "remote: Counting objects: 100% (15/15), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (13/13), done.\u001b[K\n",
+            "remote: Total 15 (delta 3), reused 5 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (15/15), 6.58 MiB | 15.38 MiB/s, done.\n",
+            "Resolving deltas: 100% (3/3), done.\n",
             "/content/repo\n"
           ]
         }
@@ -4878,7 +4896,7 @@
       "metadata": {
         "id": "bhoJR42J7McB"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4922,7 +4940,7 @@
         "id": "NDpFRWuL9EEe",
         "outputId": "60d943f5-a11e-4394-b290-cf7dea3764ab"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
