--- a/docs/tutorials/tabular/tabular_multimodal.ipynb
+++ b/docs/tutorials/tabular/tabular_multimodal.ipynb
@@ -2581,6 +2581,53 @@
         "\n",
         "For more tutorials, refer to [Predicting Columns in a Table - Quick Start](tabular-quick-start.ipynb) and [Predicting Columns in a Table - In Depth](tabular-indepth.ipynb)."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cp /content/tabular-multimodal.ipynb\n",
+        "\n",
+        "# Add the notebook file to the staging area\n",
+        "!git add tabular-multimodal.ipynb\n",
+        "\n",
+        "# Commit the staged changes\n",
+        "!git commit -m \"Updated notebook with latest analysis\"\n",
+        "\n",
+        "# Push the commit to the remote repository (e.g., to the 'main' branch)\n",
+        "!git push origin main"
+      ],
+      "metadata": {
+        "id": "Ga-okSZ7aojH",
+        "outputId": "641f6ebb-9251-4405-bc23-6ce752a76a77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Ga-okSZ7aojH",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cp: missing destination file operand after '/content/tabular-multimodal.ipynb'\n",
+            "Try 'cp --help' for more information.\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iyCnUoBgbONs"
+      },
+      "id": "iyCnUoBgbONs",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
